Created template with pagination and added pagination to the base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,8 @@
   {% block content %}{% endblock %}
 </div>
 
+{% block pagination %}{% include 'includes/pagination.html' %}{% endblock %}
+
 
 {% block footer %}{% include 'includes/footer.html' %}{% endblock %}
 
