--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -5,7 +5,14 @@
 {% endblock %}
 
 {% block content %}
-  <h1>Dishes List</h1>
+  <div class="row">
+    <div class="col-lg-8 col-md-8">
+      <h1>Dishes List</h1>
+    </div>
+    <div class="col-lg-4 col-md-4">
+      <a class="site-btn btn btn-success" href="{% url 'kitchen:dish-create' %}">Create new</a>
+    </div>
+  </div>
   <section class="categories categories-grid spad">
     <div class="categories__post">
       <div class="container">
@@ -35,13 +42,13 @@
                       </div>
                     </div>
                   </div>
-              </div>
-
+                </div>
               {% endfor %}
+
             </div>
           </div>
         </div>
       </div>
     </div>
-</section>
+  </section>
 {% endblock %}
