--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -3,13 +3,27 @@
 <div class="header__top">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 col-md-12">
+      <div class="col-lg-8 col-md-8">
         <nav class="header__menu">
           <ul>
             <li class="active"><a href="{% url 'kitchen:index' %}">Home</a></li>
             <li><a href="{% url 'kitchen:dish-type-list' %}">Dish types</a></li>
             <li><a href="{% url 'kitchen:dish-list' %}">Dishes</a></li>
             <li><a href="{% url 'kitchen:cook-list' %}">Cooks</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-lg-4 col-md-4">
+        <nav class="header__menu">
+          <ul>
+            {% if user.is_authenticated %}
+              <li>
+                <a href="{% url 'kitchen:cook-detail' pk=user.pk %}"><i>Signed in as </i>{{ user.username }}</a>
+              </li>
+              <li><a href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+              <li><a href="{% url 'login' %}">Login</a></li>
+            {% endif %}
           </ul>
         </nav>
       </div>
