--- a/templates/kitchen/cook_detail.html
+++ b/templates/kitchen/cook_detail.html
@@ -10,7 +10,14 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="breadcrumb__text">
-              <h2>About cook {{ cook.first_name }} {{ cook.last_name }}</h2>
+                <div class="row">
+                  <div class="col-lg-8 col-md-8">
+                    <h2>About cook {{ cook.first_name }} {{ cook.last_name }}</h2>
+                  </div>
+                  <div class="col-lg-4 col-md-4">
+                    <a class="site-btn btn btn-success" href="{% url 'kitchen:cook-update' pk=cook.pk %}">Update</a>
+                  </div>
+                </div>
               <div class="breadcrumb__option">
                 <a href="{% url 'kitchen:index' %}">Home</a>
                 <span>About</span>
