--- a/templates/kitchen/dish_form.html
+++ b/templates/kitchen/dish_form.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% load crispy_forms_filters %}
 
-{% block title %}<title>Create new dish</title>{% endblock %}
+{% block title %}<title>{{ object|yesno:"Update,Register" }} new dish</title>{% endblock %}
 
 {% block content %}
-  <h1><small>Create new dish</small></h1>
+  <h1><small>{{ object|yesno:"Update,Register" }} new dish</small></h1>
   <div class="d-flex justify-content-center">
     <form action="" method="post" novalidate>
       {% csrf_token %}
       {{ form|crispy }}
-      <input type="submit" class="site-btn btn btn-success" value="Create"/>
+      <input type="submit" class="site-btn btn btn-success" value="Submit"/>
       <a href="" class="site-btn btn btn-danger">Cancel</a>
     </form>
   </div>
