--- a/templates/kitchen/cook_detail.html
+++ b/templates/kitchen/cook_detail.html
@@ -16,6 +16,7 @@
                   </div>
                   <div class="col-lg-4 col-md-4">
                     <a class="site-btn btn btn-success" href="{% url 'kitchen:cook-update' pk=cook.pk %}">Update</a>
+                    <a class="site-btn btn btn-danger" href="{% url 'kitchen:cook-delete' pk=cook.pk %}">Delete</a>
                   </div>
                 </div>
               <div class="breadcrumb__option">
