--- a/templates/kitchen/dish_detail.html
+++ b/templates/kitchen/dish_detail.html
@@ -37,7 +37,7 @@
               <ul>
                 <li><a href="#" class="btn btn-warning"> Add to my dishes</a></li>
                 <li><a href="{% url 'kitchen:dish-update' pk=dish.pk %}" class="btn btn-success"> Update recipe</a></li>
-                <li><a href="#" class="btn btn-danger"> Delete recipe</a></li>
+                <li><a href="{% url 'kitchen:dish-delete' pk=dish.pk %}" class="btn btn-danger"> Delete recipe</a></li>
               </ul>
             </div>
             <div class="single-post__recipe__details__indegradients">
