Added links to 'Cancel' buttons

--- a/templates/kitchen/cook_form.html
+++ b/templates/kitchen/cook_form.html
@@ -16,7 +16,7 @@
             {% csrf_token %}
             {{ form|crispy }}
             <input type="submit" class="site-btn btn btn-success" value="Submit"/>
-            <a href="" class="site-btn btn btn-danger">Cancel</a>
+            <a class="site-btn btn btn-danger" href="{% url 'kitchen:cook-list' %}">Cancel</a>
           </form>
         </div>
       </div>
