--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,9 +1,10 @@
+{% load query_transform %}
 {% if is_paginated %}
   <nav aria-label="page navigation">
     <ul class="pagination justify-content-center">
       <li class="page-item">
         {% if page_obj.has_previous %}
-          <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+          <a class="page-link" href="?{% query_transform request page=page_obj.previous_page_number %}" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
           </a>
         {% endif %}
@@ -13,7 +14,7 @@
       </li>
       <li class="page-item">
         {% if page_obj.has_next %}
-          <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+          <a class="page-link" href="?{% query_transform request page=page_obj.next_page_number %}" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
           </a>
         {% endif %}
