--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 
 {% block title %}<title>Dish types</title>{% endblock %}
 
@@ -10,6 +11,12 @@
     <div class="col-lg-4 col-md-4">
       <a class="site-btn btn btn-success" href="{% url 'kitchen:dish-type-create' %}">Create new</a>
     </div>
+  </div>
+  <div class="input-group">
+    <form class="form-inline" action="" method="get">
+      {{ search_form|crispy }}
+      <input class="btn btn-outline-primary" type="submit" value="🔎">
+    </form>
   </div>
   {% if dish_type_list %}
     {% for dish_type in dish_type_list %}
