--- a/templates/kitchen/dish_confirm_delete.html
+++ b/templates/kitchen/dish_confirm_delete.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <h1><small>Delete dish</small></h1>
-  <h2 class="d-flex justify-content-center">Are you sure you want to delete dish: {{ dish }}</h2>
+  <h2 class="d-flex justify-content-center">Are you sure you want to delete dish: {{ dish }}?</h2>
   <div class="d-flex justify-content-center">
     <form action="" method="post">
       {% csrf_token %}
