--- a/templates/kitchen/dish_detail.html
+++ b/templates/kitchen/dish_detail.html
@@ -36,9 +36,9 @@
             <div class="single-post__recipe__details__option">
               <ul>
                 {% if dish in user.dishes.all %}
-                  <li><a href="{% url 'kitchen:add-dish' pk=dish.pk %}" class="btn btn-warning"> Delete from my dishes</a></li>
+                  <li><a href="{% url 'kitchen:dish-add-or-delete' pk=dish.pk %}" class="btn btn-warning"> Delete from my dishes</a></li>
                 {% else %}
-                  <li><a href="{% url 'kitchen:add-dish' pk=dish.pk %}" class="btn btn-warning"> Add to my dishes</a></li>
+                  <li><a href="{% url 'kitchen:dish-add-or-delete' pk=dish.pk %}" class="btn btn-warning"> Add to my dishes</a></li>
                 {% endif %}
                 <li><a href="{% url 'kitchen:dish-update' pk=dish.pk %}" class="btn btn-success"> Update recipe</a></li>
                 <li><a href="{% url 'kitchen:dish-delete' pk=dish.pk %}" class="btn btn-danger"> Delete recipe</a></li>
