--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
   
   {% block title %}<title></title>{% endblock %}
 
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/svg" href={% static 'img/favicon_image.png' %}/>
+
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800,900&display=swap"
       rel="stylesheet">
